--- a/index.html
+++ b/index.html
@@ -1,21 +1,51 @@
-<html>
-    <head>
-        <title>
-            Olá, eu sou a cabeça
-        </title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 Eu sou o corpo</h2>
-    </body>
-    <ol>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paulo Camargo</title>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <div class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <p class="name">Paulo Camargo</p>
+                    <p class="profession">Software Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+5511 99999-9999</li>
+                        <li><i class="fa fa-envelope"></i>camargo@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>camargo.com.br</li>
+                        <li><i class="fa fa-github"></i>camargo</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>Python3, Html, CSS, Git</p></li>
+                        <li><p>Linux</p></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        <br> Um pouco sobre mim.
+                        <br> Quais são as minhas competências.
+                    </p>
+                </section>
+            </div>
+        </section>
+</main>
+</body>
 </html>
