feat-add-job-exp

--- a/index.html
+++ b/index.html
@@ -40,11 +40,37 @@
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
                     <p class="about-me-contents">
+                        Ola eu sou o Paulo.<br>
                         <br> Um pouco sobre mim.
                         <br> Quais são as minhas competências.
                     </p>
                 </section>
             </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Presente</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui quais foram as principais atividades
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2017-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                           Descreva aqui quais foram as principais atividades Empresa 02
+                            </p>
+                        </div>
+                </div>
+            </section>
         </section>
 </main>
 </body>
